--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,22 @@
 <!DOCTYPE html>
+<!--
+
+ ________  _______  _________  _______   ________          _____ ______   ________  _________  _______   ___      ___
+|\   __  \|\  ___ \|\___   ___\\  ___ \ |\   __  \        |\   _ \  _   \|\   __  \|\___   ___\\  ___ \ |\  \    /  /|
+\ \  \|\  \ \   __/\|___ \  \_\ \   __/|\ \  \|\  \       \ \  \\\__\ \  \ \  \|\  \|___ \  \_\ \   __/|\ \  \  /  / /
+ \ \   ____\ \  \_|/__  \ \  \ \ \  \_|/_\ \   _  _\       \ \  \\|__| \  \ \   __  \   \ \  \ \ \  \_|/_\ \  \/  / /
+  \ \  \___|\ \  \_|\ \  \ \  \ \ \  \_|\ \ \  \\  \|       \ \  \    \ \  \ \  \ \  \   \ \  \ \ \  \_|\ \ \    / /
+   \ \__\    \ \_______\  \ \__\ \ \_______\ \__\\ _\        \ \__\    \ \__\ \__\ \__\   \ \__\ \ \_______\ \__/ /
+    \|__|     \|_______|   \|__|  \|_______|\|__|\|__|        \|__|     \|__|\|__|\|__|    \|__|  \|_______|\|__|/
+
+
+
+  Want to see the code?
+
+  Email me: peter@matev.co.uk
+
+
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
